Fix: Remove a visible underline from dropdown menu button

--- a/css/frontend-common.css
+++ b/css/frontend-common.css
@@ -256,6 +256,7 @@
 		background: var(--kompassi-bg);
 		border-radius: var(--kompassi-radius);
 		box-shadow: var(--kompassi-box-shadow);
+      text-decoration: none;
 	}
       .kompassi-dropdown-menu > a {
          display: block;
